<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.luisgoyes.practica4.fragment_hoteles" 
	android:layout_width="match_parent"
    android:layout_height="match_parent">
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	
	    <LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.titulo"
				android:text="@string/sHotel"
				/>
			<TextView
				style="@style/sTV.titulo.subtitulo"
				android:text="@string/pintada"
				/>
	    </LinearLayout>
		
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/introHotel"
				/>
	    </LinearLayout>
		
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo.subtitulo"
		    	android:text="@string/nombreHotel1"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/descriHotel1"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/horariHotel1"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/direccHotel1"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/TelefoHotel1"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/correoHotel1"
				/>
			<ImageView 
			    style="@style/sIV.center_horizontal"
		    	android:src="@drawable/imhotel1"
			    />
	    </LinearLayout>
	    
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo.subtitulo"
		    	android:text="@string/nombreHotel2"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/descriHotel2"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/horariHotel2"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/direccHotel2"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/TelefoHotel2"
				/>
			<ImageView 
			    style="@style/sIV.center_horizontal"
		    	android:src="@drawable/imhotel2"
			    />
	    </LinearLayout>
	    
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo.subtitulo"
		    	android:text="@string/nombreHotel3"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/descriHotel3"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/horariHotel3"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/direccHotel3"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/TelefoHotel3"
				/>
			<ImageView 
			    style="@style/sIV.center_horizontal"
		    	android:src="@drawable/imhotel3"
			    />
	    </LinearLayout>
	    
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo.subtitulo"
		    	android:text="@string/nombreHotel4"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/descriHotel4"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/horariHotel4"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/direccHotel4"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/TelefoHotel4"
				/>
			<ImageView 
			    style="@style/sIV.center_horizontal"
		    	android:src="@drawable/imhotel4"
			    />
	    </LinearLayout>
	</LinearLayout>
</ScrollView>