<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.luisgoyes.practica4.fragment_bares" 
	android:layout_width="match_parent"
    android:layout_height="match_parent">
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	
	    <LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.titulo"
				android:text="@string/sBares"
				/>
			<TextView
				style="@style/sTV.titulo.subtitulo"
				android:text="@string/pintada"
				/>
	    </LinearLayout>
		
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/introBares"
				/>
	    </LinearLayout>
		
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo.subtitulo"
		    	android:text="@string/nombreBar1"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/horariBar1"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/direccBar1"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/TelefoBar1"
				/>
	    </LinearLayout>
	    
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo.subtitulo"
		    	android:text="@string/nombreBar2"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/horariBar2"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/direccBar2"
				/>
	    </LinearLayout>
		
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo.subtitulo"
		    	android:text="@string/nombreBar3"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/horariBar3"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/direccBar3"
				/>
	    </LinearLayout>
	    
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo.subtitulo"
		    	android:text="@string/nombreBar4"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/horariBar4"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/direccBar4"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/TelefoBar4"
				/>
	    </LinearLayout>
	    
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo.subtitulo"
		    	android:text="@string/nombreBar5"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/horariBar5"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/direccBar5"
				/>
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/TelefoBar5"
				/>
	    </LinearLayout>
	</LinearLayout>
</ScrollView>