<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.luisgoyes.practica4.fragment_principal"
	android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	
	    <LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.titulo"
				android:text="@string/pintada"
				/>
			<TextView
				style="@style/sTV.titulo.subtitulo"
				android:text="@string/antioquia"
				/>
	    </LinearLayout>
		
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/intro1"
				/>
			<ImageView 
			    style="@style/sIV.center_horizontal"
		    	android:src="@drawable/im1"
			    />
	    </LinearLayout>
		
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/intro2"
				/>
			
			<ImageView 
			    style="@style/sIV.center_horizontal"
		    	android:src="@drawable/im2"
			    />
	    </LinearLayout>
		
		<LinearLayout 
	        android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"
	        >
	        <TextView
				style="@style/sTV.parrafo"
		    	android:text="@string/intro3"
				/>
			<ImageView 
			    style="@style/sIV.center_horizontal"
		    	android:src="@drawable/im3"
			    />
	    </LinearLayout>
	</LinearLayout>
</ScrollView>